--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,11 @@
 
 # Site settings
 title: My Jekyll Website
-description: This is a description of my awesome Jekyll-powered site
-baseurl: ""  # The base URL of your site (leave empty for GitHub Pages)
-url: "https://username.github.io"  # Replace 'username' with your GitHub username
+description: This is a description of my awesome Jekyll-powered site. I like sharing!!!
+
 
 # Theme settings (you can choose from many pre-built themes in Jekyll)
-theme: "minima"  # "minima" is a simple theme, you can choose another if you prefer
+theme: "hacker"  # "minima" is a simple theme, you can choose another if you prefer
 
 # Social links (you can add links to your social profiles)
 
