--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@
 # Site settings
 title: My Jekyll Website
 description: This is a description of my awesome Jekyll-powered site. I like sharing!!!
-
+baseurl: ""  # The base URL of your site (leave empty for GitHub Pages)
+url: "https://Dianyu-Lai.github.io"  # Replace 'username' with your GitHub username
 
 # Theme settings (you can choose from many pre-built themes in Jekyll)
 theme: "hacker"  # "minima" is a simple theme, you can choose another if you prefer
