--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: ""  # The base URL of your site (leave empty for GitHub Pages)
 url: "https://Dianyu-Lai.github.io"  # Replace 'username' with your GitHub username
 
 # Theme settings (you can choose from many pre-built themes in Jekyll)
-theme: "minima"  # "minima" is a simple theme, you can choose another if you prefer
+theme: "midnight"  # "minima" is a simple theme, you can choose another if you prefer
 
 # Social links (you can add links to your social profiles)
 
