--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,10 @@ baseurl: "https://Dianyu-Lai.github.io"  # The base URL of your site (leave empt
 url: "https://Dianyu-Lai.github.io"  # Replace 'username' with your GitHub username
 
 # Theme settings (you can choose from many pre-built themes in Jekyll)
-theme: "Midnight"  # "minima" is a simple theme, you can choose another if you prefer
 
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 # Social links (you can add links to your social profiles)
 
 
