--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://Dianyu-Lai.github.io"  # Replace 'username' with your GitHub usern
 
 # Theme settings (you can choose from many pre-built themes in Jekyll)
 
-remote_theme: pages-themes/hacker@v0.2.0
+remote_theme: pages-themes/architect@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 # Social links (you can add links to your social profiles)
